// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`notifications-flyout/Notification renders correctly with the featured prop 1`] = `
<div
  className="hig__notification-v1"
  role="listitem"
  style={
    Object {
      "height": "",
    }
  }
>
  <div
    className="hig__notification-v1__content hig__notification-v1__content--featured"
  >
    <div
      className="hig__notification-v1__content-text"
    >
      <div
        className="hig__rich-text hig__rich-text--small"
      >
        <div>
          <p>
            <b>
              Your subscription expires May 5
            </b>
          </p>
          <p>
            Maya
            <br />
            Media & Entertainment Collection
            <br />
            Product Design Collection
            <br />
            2 more
          </p>
        </div>
      </div>
      <div
        className="hig__notification-v1__dismiss-button"
      >
        <button
          className="hig__icon-button hig__icon-button--transparent"
          onBlur={undefined}
          onClick={[Function]}
          onFocus={undefined}
          onMouseEnter={undefined}
          onMouseLeave={undefined}
          title="Dismiss featured notification"
        >
          <svg
            className="hig__icon-button__icon"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.4 5.4l-.8-.8L8 7.3 5.4 4.6l-.8.8L7.3 8l-2.7 2.6.8.8L8 8.7l2.6 2.7.8-.8L8.7 8z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`notifications-flyout/Notification renders correctly with the unread prop 1`] = `
<div
  className="hig__notification-v1"
  role="listitem"
  style={
    Object {
      "height": "",
    }
  }
>
  <div
    className="hig__notification-v1__content hig__notification-v1__content--unread"
  >
    <div
      className="hig__notification-v1__content-text"
    >
      <div
        className="hig__rich-text hig__rich-text--small"
      >
        <div>
          <p>
            <b>
              Your subscription expires May 5
            </b>
          </p>
          <p>
            Maya
            <br />
            Media & Entertainment Collection
            <br />
            Product Design Collection
            <br />
            2 more
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
